@@ -6,6 +6,7 @@ include(PLX_ROOT.'config.php');
 include(PLX_CORE.'lib/config.php');
 
 # On démarre la session
+session_set_cookie_params(0, "/", $_SERVER['SERVER_NAME'], isset($_SERVER["HTTPS"]), true);
 session_start();
 
 # On inclut les librairies nécessaires
